# Overture-ROS

./: .gitignore  .gitmodules
src/overture_filters/: CMakeLists.txt  package.xml
src/overture_filters/src/low_pass_filter/: low_pass_filter.cpp
src/overture_gazebo_plugins/: CMakeLists.txt  package.xml
src/overture_gazebo_plugins/src/: nt_motor.cpp
src/overture_gazebo_plugins/src/linked_joint/: linked_joint.cpp
src/overture_gazebo_plugins/src/nt_cancoder/: nt_cancoder.cpp
src/overture_gazebo_plugins/src/nt_imu/: nt_imu.cpp
src/overture_gazebo_plugins/src/nt_motor/: nt_motor.cpp
src/overture_gazebo_plugins/src/world_telemetry/: world_telemetry.cpp
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/launch/: simple.launch
src/robot_simulation/models/7421-24/: IntakeWheels.dae  ShooterRoller.dae  Shooter_Collision.dae  StorageWheels_Collision.dae  Supports.dae  model.config  model.xacro
src/robot_simulation/models/FRC_Field_2024/: FRC_Field_2024.xacro  FRC_Field_2024_Collision.dae  model.config  model.xacro
src/robot_simulation/models/FirstCAD7421/: Arm.dae  Arm_Collision.dae  Chassis_Collision.dae  IntakeWheels_Collision.dae  Shooter.dae  Shooter_Collision.dae  StorageWheels.dae  StorageWheels_Collision.dae  Supports_Collision.dae  model.config  model.xacro
src/robot_simulation/models/FirstRobotConcept/: Arm.dae  Arm_Collision.dae  Chassis_Collision.dae  IntakeWheels.dae  IntakeWheels_Collision.dae  Roller.dae  Shooter.dae  Supports.dae  (+3 more)
src/robot_simulation/worlds/: frc_2024.world  frc_2024.xacro  simple.world  simple.xacro
(+61 files in other folders)
